--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -12,6 +12,7 @@ stringData:
     SECRET_PLEX_CLAIM: ENC[AES256_GCM,data:/zuCrOwRR0i0sQjFpFElHwdlvXO3F35VNeM=,iv:4/ief35zBV+VAlWYMHXAAbyYAFVbnjYI3ECxnLAcatk=,tag:P3++T9TypesmPOwchTLSnw==,type:str]
     SECRET_FACTORIO_TOKEN: ENC[AES256_GCM,data:MfTUr1KSqSi1+Fcnr1Fy0h1NBpp0Pp4MinCOwLey,iv:cgqnUSYm2WeFWXWD1zvHsBsAtha2dtbe9nqiYNguCq4=,tag:MI6l1hX9c5hEaZUx+xKYtg==,type:str]
     SECRET_FACTORIO_USERNAME: ENC[AES256_GCM,data:YaHndgDaZuqT,iv:wHwokf0uTYFlnMwDHNBoRF6S3nknpW6nOm52emvb3eE=,tag:zcCIU0k5PyCz3RjuohiV7Q==,type:str]
+    SECRET_POSTGRES_TESLAMATE_PASSWORD: ENC[AES256_GCM,data:evbZpBggZ2O1+wcITNVeYbe3vyq3jQ7WcYnCQmUL3Lc=,iv:rzMCK3uUhgQ3p1iuTj9cH4XsS604arRc1hhEIGsE4/4=,tag:+zYLCYlZKeNj3eovAXCKew==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -27,8 +28,8 @@ sops:
             OExmSzRnRHNFTE1MaTFGMnR0cmRYRzQKA42j8W2wjuuw+HvSET6z5kYgMf0zX42V
             TiMHob898+7S2i28Wv3JTMhQWROsQdCfn+pXpR8I/dNdkv0RxnKNWA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-07-29T02:20:18Z"
-    mac: ENC[AES256_GCM,data:yRO5VPcx11GyqFpsNU217FaRU89IU1AVJtRkPIyURQghGHxelZQcCI0CIK2x0rKvWCb8AN5eSJMDGhEk0gbYvmBPXVJQrXO4EXBHw7QVnN0O22bGyTW4ixeGoyI+IwGtmgNnENzKBncxA1gWWCjdcXFHC3b6M8IaCzftdnMixKw=,iv:OvBaKht9es+WWXTj3/+Aks7qvIaW6uiiDVR1+hgR44Q=,tag:SleFUcsmkFWjoKOw/gE+TA==,type:str]
+    lastmodified: "2023-03-24T04:51:46Z"
+    mac: ENC[AES256_GCM,data:DLqR3y4s/zznKQdtI524jl347gFKu1f6sxjJ+dCT8phCYR+QurAuZudj1iMWznbtwkgXbZh5SbSQXwl+NI/P8+MSMQfVtAe91+PkRYphfgbb+S3ju6muWHkIifWzgDTYYUOq5m9bV+pM1ZJPFlgkWF64GqCma6HTtbqx2fbwPvY=,iv:0f1UAM+UmKywZGiXMXsTI57C1be9jB6kwY0fSJzI+7Q=,tag:/2SZ9FGGRdKOjyBomEn0CA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
