move postgres passwords

--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -144,3 +144,5 @@ spec:
           volumeClaimTemplate:
             spec:
               storageClassName: "nfs-client"
+
+9h78b3qSKwTNiDFMwK3nH47SwvbhhqqN
