--- a/cluster/apps/home/teslamate/helm-release.yaml
+++ b/cluster/apps/home/teslamate/helm-release.yaml
@@ -60,10 +60,12 @@ spec:
         enablePostgresUser: false
         database: teslamate
         username: teslamate
-        existingSecret: postgres-secrets
-        secretKeys:
-          adminPasswordKey: adminPassword
-          userPasswordKey: userPassword
+        postgresPassword: ${SECRET_POSTGRES_PASSWORD}
+        password: ${SECRET_POSTGRES_TESLAMATE_PASSWORD}
+        # existingSecret: postgres-secrets
+        # secretKeys:
+        #   adminPasswordKey: adminPassword
+        #   userPasswordKey: userPassword
       primary:
         persistence:
           enabled: true
