--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -13,6 +13,7 @@ stringData:
     SECRET_FACTORIO_TOKEN: ENC[AES256_GCM,data:MfTUr1KSqSi1+Fcnr1Fy0h1NBpp0Pp4MinCOwLey,iv:cgqnUSYm2WeFWXWD1zvHsBsAtha2dtbe9nqiYNguCq4=,tag:MI6l1hX9c5hEaZUx+xKYtg==,type:str]
     SECRET_FACTORIO_USERNAME: ENC[AES256_GCM,data:YaHndgDaZuqT,iv:wHwokf0uTYFlnMwDHNBoRF6S3nknpW6nOm52emvb3eE=,tag:zcCIU0k5PyCz3RjuohiV7Q==,type:str]
     SECRET_POSTGRES_TESLAMATE_PASSWORD: ENC[AES256_GCM,data:evbZpBggZ2O1+wcITNVeYbe3vyq3jQ7WcYnCQmUL3Lc=,iv:rzMCK3uUhgQ3p1iuTj9cH4XsS604arRc1hhEIGsE4/4=,tag:+zYLCYlZKeNj3eovAXCKew==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:9SKgeLjLj2rQP0r6b/okXVQPDlcYhCozyXzi3dYX60Y=,iv:KKIOBN6FjTbFYSI+WE5X89xvQdAwQxFWL4UxjUASxYc=,tag:G6F73RjdoWjBCNt2TQgozQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -28,8 +29,8 @@ sops:
             OExmSzRnRHNFTE1MaTFGMnR0cmRYRzQKA42j8W2wjuuw+HvSET6z5kYgMf0zX42V
             TiMHob898+7S2i28Wv3JTMhQWROsQdCfn+pXpR8I/dNdkv0RxnKNWA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-24T04:51:46Z"
-    mac: ENC[AES256_GCM,data:DLqR3y4s/zznKQdtI524jl347gFKu1f6sxjJ+dCT8phCYR+QurAuZudj1iMWznbtwkgXbZh5SbSQXwl+NI/P8+MSMQfVtAe91+PkRYphfgbb+S3ju6muWHkIifWzgDTYYUOq5m9bV+pM1ZJPFlgkWF64GqCma6HTtbqx2fbwPvY=,iv:0f1UAM+UmKywZGiXMXsTI57C1be9jB6kwY0fSJzI+7Q=,tag:/2SZ9FGGRdKOjyBomEn0CA==,type:str]
+    lastmodified: "2023-03-24T05:49:07Z"
+    mac: ENC[AES256_GCM,data:mdthk4WsUGWjQNXak5YD52Ug7Fy/2g6lKZvRrxNs/cs9bfpDxzZdZx0OtjLV/tSJtqRO+xjhzBE2yJO96r5zxe0dI0RLulzokGfA9OrpaX94Z2z6NYJoxCwbBytnJGVCK7UQ5u6Xo3xzbAkgdsEM+rq+TlmczEPtCmDdlg84w90=,iv:OJj+a07ix5wzT4K8i9CIwaz7B7APr1XGDFU5ziXxvjc=,tag:6DvxX+0JN/829s6t3eByKA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
