--- a/cluster/apps/home/teslamate/helm-release.yaml
+++ b/cluster/apps/home/teslamate/helm-release.yaml
@@ -55,7 +55,7 @@ spec:
           name: teslamate-secrets
     postgresql:
       enabled: true
-      extraEnvVarsSecret:
+      # extraEnvVarsSecret:
       auth:
         enablePostgresUser: false
         database: teslamate
