--- a/cluster/apps/home/teslamate/kustomization.yaml
+++ b/cluster/apps/home/teslamate/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - teslamate-secrets.yaml
-  - postgres-secrets.yaml
+  # - postgres-secrets.yaml
   - helm-release.yaml
