add postgres env vars

--- a/cluster/apps/home/teslamate/postgres-secrets.yaml
+++ b/cluster/apps/home/teslamate/postgres-secrets.yaml
@@ -5,8 +5,10 @@ metadata:
     name: postgres-secrets
     namespace: home
 stringData:
-    adminPassword: ENC[AES256_GCM,data:jr6s34+S7K2/PJFJl11L7avLUuf0y1jKztj3j5by5MI=,iv:zHCP3KG+irix7/c0KXRplSHNiq2gHOGIvCHjdmlaYV0=,tag:vRz2eehgcqq9RTJ7tSGogQ==,type:str]
-    userPassword: ENC[AES256_GCM,data:CzxqhXt7f8TdkY+N54PfroXx1DghjJph9WHAnQ43fgF2fDlKPw==,iv:2Z3Y5hq85RfBbtL2k3XC7auTEIUz5IZ1BVTwBZkuIEY=,tag:fQiqaKr6HBVnEyMTs8L3ng==,type:str]
+    POSTGRESQL_POSTGRES_PASSWORD: ENC[AES256_GCM,data:9wTMemqT3H3LBm7WRy8YFL5M6jX+8d2oJ1aXRH7uYEc=,iv:jY27F4EA18MGSVXT+CMsy5NCoHeoB2Bu8kGLik0J2a8=,tag:CT/c+hdIu8YR4AU1p+QnQw==,type:str]
+    POSTGRESQL_DATABASE: ENC[AES256_GCM,data:eHNCut36kluD,iv:tzoWNtlxPy4uK0z98RMjk/oQZaQRuTafE05ECN0pI7M=,tag:9V2+anZzdxLF+s28xUHaDw==,type:str]
+    POSTGRESQL_USERNAME: ENC[AES256_GCM,data:P+H1cBOBS/os,iv:+hbK3N0kR/rnICcxSUfidaiEdx5YzE9KrduBTPqd84Q=,tag:oe7Uf60lzVIi/WQ8IvZhKQ==,type:str]
+    POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:bZ6VLhJ/h6ufCNnJhhBq8eoEQaALKmNggT0wrWN36og=,iv:wzVlbnk3vE04Mho8a4SpmT4EnuAeJ5pit4zofar5Cm8=,tag:rtuV7gZhjpBndmAzLecrJQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +24,8 @@ sops:
             QU43NSs4aWVkMzljTDhlbWhFQmZYSncKjAfHLr+aY0nnLUapQuglo/ZxRD97vlm4
             +IcBSU+3NRgHeMtVikFv+ApSXPp7xohLGtn32caTYs8oyzqK0ndudw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-24T05:38:39Z"
-    mac: ENC[AES256_GCM,data:sp1qYYWDfatOKZNtEXRZCidu80oOxbx4ectjxB53yHMJzCLxZSrpNwFetGVIxMBuTFlTArDMkdGPUdC7camL9UljNWGDl/Yr9RFN36lnSSCCknKwyfbsmXgcKPKb6bx1fmGtyF5D/SMn5b16ZctTAKdbEPr95tNm7REMjttPSQ8=,iv:j4EHhJwNQU47CDlzEot2wwoQK95yub6Z/WEFZXmKsQU=,tag:Lha4y039TXs/aW7u2RQrYg==,type:str]
+    lastmodified: "2023-03-24T06:14:36Z"
+    mac: ENC[AES256_GCM,data:huAB5dtY7XX5MmmABlWCd2SfRNzSrZbgndbyYRCtgSp+sL4z/ts9Aw/orGdC4+R/s8xuG1rRYdbSfXFBjUul2x4d+Pd3uA3HFCwcLF1w78y/GsdANfgPNsroZjhbCybv5d5q0XQFxFZPXNBsP4NJEgunuMt0cV6HoJXZareBZrg=,iv:6ntW628EtQhKp/lK1Dmg+PWr1t/4xMVt0PG4BZbi+7g=,tag:3ksIB8sZygweJVkbhs7ONg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
