--- a/cluster/apps/home/teslamate/helm-release.yaml
+++ b/cluster/apps/home/teslamate/helm-release.yaml
@@ -55,17 +55,7 @@ spec:
           name: teslamate-secrets
     postgresql:
       enabled: true
-      # extraEnvVarsSecret:
-      auth:
-        enablePostgresUser: false
-        database: teslamate
-        username: teslamate
-        postgresPassword: ${SECRET_POSTGRES_PASSWORD}
-        password: ${SECRET_POSTGRES_TESLAMATE_PASSWORD}
-        # existingSecret: postgres-secrets
-        # secretKeys:
-        #   adminPasswordKey: adminPassword
-        #   userPasswordKey: userPassword
+      extraEnvVarsSecret: postgres-secrets
       primary:
         persistence:
           enabled: true
