--- a/cluster/apps/home/teslamate/teslamate-secrets.yaml
+++ b/cluster/apps/home/teslamate/teslamate-secrets.yaml
@@ -8,6 +8,10 @@ stringData:
     ENCRYPTION_KEY: ENC[AES256_GCM,data:NsIuSWh69BxrAFTyqPrUgTifIE6xxUfkEC0av10s1eHnrJOswa6bPKqnYyBDOZcNjLNlrx9mEQdYIrJPGl0UVg==,iv:5iOIlSc0uUsSbbfi1nRZyzhTJNSLWyJg63fsSurvjZA=,tag:7e8r7RB+FG6XAHb/bRXTGw==,type:str]
     DATABASE_NAME: ENC[AES256_GCM,data:O6tJ7hk4uPZV,iv:09yGTbuosSGDVBazN18bXkQ6dfgdT2+xXxs7bdVF6BQ=,tag:/NRxsd3Lkb3qFN5mQIPB6A==,type:str]
     DATABASE_USER: ENC[AES256_GCM,data:A+vksS4GhjcO,iv:ynBQ0BH0YH5VzCQ1VUCYKlegrECRh7YrKuUrEbpuL+Y=,tag:dkuohoT8Ev+QAlNYrajSOQ==,type:str]
+    DATABASE_PASS: ENC[AES256_GCM,data:5tYElsi3dHfNq0kY1kKZM+nsIxZPBFw6nYTR+z+iq6o=,iv:etLEP3mznab5xuXvCVvrOaLQ11OfLPkmnyPHSqKXTJE=,tag:CyPFf8RwhVaxSwi7av/Sgg==,type:str]
+    POSTGRES_DB: ENC[AES256_GCM,data:9CKIvWStKN6s,iv:xMnpim3FWGKbuS2z7VniJeDXFxVdLJXKZPBpSMwxxII=,tag:EjMhmyIB8oGu+qWUwUjxPA==,type:str]
+    POSTGRES_PASS: ENC[AES256_GCM,data:xqX0Imd9SDemATRSsIo/C08xQO/Oa9OZ0ELlo/RGuv4=,iv:TaV/hjDNOkOJ+w5d0LMt4gUwQotxtKTZJ/cogM40/cA=,tag:tM8Pe46m3dwlyNjxAK00cg==,type:str]
+    POSTGRES_USER: ENC[AES256_GCM,data:fdmtB7T5apN7,iv:PFz/Ce3Y7+N7RwzakY80Crek5aMgc63gi9TmL6sArAI=,tag:pHe7DQLjkn36lPfcWVPaLw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +27,8 @@ sops:
             RThRbytFaVpjd0pUK0xIMlBITEErSEkKDTjVylxU9CKt7qZhPpjnWcZnMt0GukHG
             Xf+VR94vmj63p9rDtvUKYlH8cNNVlpVh5vUmStEscZX1BiawzbNdGw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-24T05:20:41Z"
-    mac: ENC[AES256_GCM,data:SmedZYEfOsDaIgTUCXZjcBHO3IrtM+Th57P2206YRVfgfaCcJkJ+mlnBoShkoHDxJgxJSUYjcMJsR3NkFvr1h4cW1bIk/kEbmdhlsluwglzyz3Wm+raNgMPoB6Jdidd63U07npAO8znkFKpr4afDfsbtz2PDYnYR5D9gKDgq6aw=,iv:D6hzx+tZsNWn3cKF0m2yQ2DhlfZHvSr62LYBEZOFJfE=,tag:ZhSAwt+roXAr2fUK5rLHYA==,type:str]
+    lastmodified: "2023-03-24T06:33:13Z"
+    mac: ENC[AES256_GCM,data:zQ+hwd4XxB7b0S9sz0do58IeYLnTlalPlAgEJPl0QacnQNVkRK3wuOMJJxxU4DfBjiDZcy7y1WeGwGN6hJjIs6t1qJV2Q+T7rURXEQJf0zn9LzxXiNxoUgsQiUXjy7LLFUgGR70J9A0H2zZWIGI+OdK9S/l/MVcxU7XjSfPmHI8=,iv:LHrSMhVRGoi91cxcggZx0401hvxOXEHeoRxxP1p/Inw=,tag:DbmEkDiB2zFXQo/mg0SDEw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
