--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -105,7 +105,7 @@ spec:
             secretName: "grafana-tls"     
       additionalDataSources:
         - name: TeslaMate
-          type: PostgreSQL
+          type: postgresql
           url: teslamate-postgresql.home
           basicAuth: true
           basicAuthUser: postgres
