change data source options

--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -107,12 +107,13 @@ spec:
         - name: TeslaMate
           type: postgres
           url: teslamate-postgresql.home
-          basicAuth: true
-          basicAuthUser: postgres
-          basicAuthPassword: ${SECRET_POSTGRES_PASSWORD}
+          user: postgres
+          secureJsonData:
+            password: ${SECRET_POSTGRES_PASSWORD}
           editable: true
           jsonData:
-            tlsSkipVerify: true
+            sslmode: disable
+            database: teslamate
     prometheus:
       enabled: false
       ingress:
