--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -13,6 +13,8 @@ stringData:
     SECRET_FACTORIO_TOKEN: ENC[AES256_GCM,data:MfTUr1KSqSi1+Fcnr1Fy0h1NBpp0Pp4MinCOwLey,iv:cgqnUSYm2WeFWXWD1zvHsBsAtha2dtbe9nqiYNguCq4=,tag:MI6l1hX9c5hEaZUx+xKYtg==,type:str]
     SECRET_FACTORIO_USERNAME: ENC[AES256_GCM,data:YaHndgDaZuqT,iv:wHwokf0uTYFlnMwDHNBoRF6S3nknpW6nOm52emvb3eE=,tag:zcCIU0k5PyCz3RjuohiV7Q==,type:str]
     SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:r6wLbLuQOvzWQamWM7Q=,iv:IHxDTwVfboTPEItO9j8WVsPuNJq3zBS2dOCEJ/U8s0Q=,tag:SdZF3Zm89OZuPrf7cAnPCg==,type:str]
+    SECRET_TESLAMATE_GRAFANA_USERNAME: ENC[AES256_GCM,data:beqz3ob7Fadbs/Q=,iv:6fVcm3lbAlPzHLIhzsLjNxxzCdADdUoWdv4P1ObMUSc=,tag:jr2hEu47WOEJc1KE0SYXGw==,type:str]
+    SECRET_TESLAMATE_GRAFANA_PASSWORD: ENC[AES256_GCM,data:Dmn5+bKgv1vxskUhh82kIQhHKRtquteI0Am3kUs9KIo=,iv:b9oodHjgom8HYSaf/INbiZRcZxwaYNAfsls05wfTibE=,tag:aFzS3nsiGvJ9qwEQl9coPw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -28,8 +30,8 @@ sops:
             OExmSzRnRHNFTE1MaTFGMnR0cmRYRzQKA42j8W2wjuuw+HvSET6z5kYgMf0zX42V
             TiMHob898+7S2i28Wv3JTMhQWROsQdCfn+pXpR8I/dNdkv0RxnKNWA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-24T06:40:16Z"
-    mac: ENC[AES256_GCM,data:ymKRCGyPBIJHRx2+AZTWU8Ke1O+oe2f8ZyQ0H2Nel7nAFfP89OgEDQLgGPpoWQm1U3oXHpj53R3ra3B9JdlK0AK2xMQYzBOwGNjZk5bzpt2LDqRuPtN5HjPzig8LTd8e4LlNzXNFYCNDLxwcbBrn/dODCeAm+PaWD8Oilu+ktws=,iv:9NNE2qvkc77ix0GJeFRhacFH/qCTeM4xBkNcMmgpQm8=,tag:6PFAhlYsTx1RL6TqIAi51Q==,type:str]
+    lastmodified: "2023-03-25T19:39:49Z"
+    mac: ENC[AES256_GCM,data:TVy2OF8krSfUB5P5vGb8gj5zO05U7tKjrx5a7gO9kMsHR5wyXoSXvuA4zUHCzODY7vaBddBrrU60K7ihZmWa9sRDLLjICZVhwJLuBItNsK+WpHx4cwYuReBtiOeJWpEE5Ipbe+MQpZbkC0lg1EnYUbriwX0J2JMEWMbOv1NvyWU=,iv:gOzRpwswHy1yl3bOWsljUd99DJLeuZeIALRiseUXEiY=,tag:U2R1hnos84O9gE3kD+3nOw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
