add grafana admin secret

--- a/cluster/apps/home/grafana/helm-release.yaml
+++ b/cluster/apps/home/grafana/helm-release.yaml
@@ -60,5 +60,7 @@ spec:
       enabled: true
       storageClassName: nfs-client
       size: 10Gi
-    adminUser: ${SECRET_TESLAMATE_GRAFANA_USERNAME}
-    adminPassword: ${SECRET_TESLAMATE_GRAFANA_PASSWORD}
+    admin:
+      existingSecret: grafana-secrets
+      userKey: admin-user
+      passwordKey: admin-password
