change admin creds

--- a/cluster/apps/home/grafana/grafana-secrets.yaml
+++ b/cluster/apps/home/grafana/grafana-secrets.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: home
 stringData:
     admin-user: ENC[AES256_GCM,data:x2wfwg72XzsCP1Y=,iv:jqzkrkpIy0I3nCr2ABN8ziJjGbAQ2n/VcrJCA0Xhmxo=,tag:4o1ksVBm1abgOkQrZtoqDw==,type:str]
-    admin-password: ENC[AES256_GCM,data:t2EXyx7NdhPOJNhErM2v/titZeBa4GGDcjKwKp1UNaY=,iv:PsTxvWThneFmmJePtmuOfn4wM7TUs8JhucwPRz9c32U=,tag:QqncRuB/WxpJqAJg2sffvQ==,type:str]
+    admin-password: ENC[AES256_GCM,data:pVY/+zTqP+jjAA==,iv:uzBhl91TqVn2Q3w0k5vn/odPMitNlON3FrNlYt/GGzs=,tag:P8nulZ0o3CxTqlloPvUG7Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             WjE5VWd2ZkdYanoxQ3FOTC9QbEUwZEkKV5Kc/kYmc79CAHsE82iSUQFzpDIM7krD
             O2iDz9n6KtdTFNt5yQnShlguImr93oumz/nI5zq1BLhHMn/Zp9BvVw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-25T19:47:00Z"
-    mac: ENC[AES256_GCM,data:qgvwyVeAHaSrjHQp1TpPaPsF3u7dQ22sj3NMV3cainA0WLesuwzXzM7yaVpy1aEIZxCnGBLD/KGDRmDASiNLarpy9DS6A6cB5aIIHYDnWP9lRvVQ4A68W1yCnKo5dSSdc204owLSH3n64nssiCTYSm0SMNuaunl9U1JGLKYfSbQ=,iv:9sqyAxFQotSBmrOlPv0vhrPW3z1cQEN/PUBusWz3cyc=,tag:SDd8Qck6z3L7qcnPiwtQcQ==,type:str]
+    lastmodified: "2023-03-25T19:56:19Z"
+    mac: ENC[AES256_GCM,data:sTQO2ynVZ/6H2/AvVn36aHFWvfLI0pMjvDEIYLUo7aRkGrediwCSG1mfNGBoYF589Ujvjg6gw+hKz+1m9ebShiZD0nMle1bbLEtTnRQmlqkHJnEQ8FjRdHsx7SmFh8NmWSFq4Y0w38Uveo4Et55e2J4fuCyJGB/XHbZV3PgcwLI=,iv:oCN5Ymqh4+C4/0xXMNmdC+fTgZrIKvQ7uIfRjEP0tts=,tag:8qPFr5LShK0/wiy1+GU/mw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
