change admin creds

--- a/cluster/apps/home/grafana/grafana-secrets.yaml
+++ b/cluster/apps/home/grafana/grafana-secrets.yaml
@@ -4,7 +4,7 @@ metadata:
     name: grafana-secrets
     namespace: home
 stringData:
-    admin-user: ENC[AES256_GCM,data:x2wfwg72XzsCP1Y=,iv:jqzkrkpIy0I3nCr2ABN8ziJjGbAQ2n/VcrJCA0Xhmxo=,tag:4o1ksVBm1abgOkQrZtoqDw==,type:str]
+    admin-user: ENC[AES256_GCM,data:o5iymYg=,iv:Z1I70NSDX7c4CBlmGyTxBuZmq6YSMJlUc+A/RbI5p5U=,tag:CJLojJPur4SgHbvqdWrNDA==,type:str]
     admin-password: ENC[AES256_GCM,data:pVY/+zTqP+jjAA==,iv:uzBhl91TqVn2Q3w0k5vn/odPMitNlON3FrNlYt/GGzs=,tag:P8nulZ0o3CxTqlloPvUG7Q==,type:str]
 sops:
     kms: []
@@ -21,8 +21,8 @@ sops:
             WjE5VWd2ZkdYanoxQ3FOTC9QbEUwZEkKV5Kc/kYmc79CAHsE82iSUQFzpDIM7krD
             O2iDz9n6KtdTFNt5yQnShlguImr93oumz/nI5zq1BLhHMn/Zp9BvVw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-25T19:56:19Z"
-    mac: ENC[AES256_GCM,data:sTQO2ynVZ/6H2/AvVn36aHFWvfLI0pMjvDEIYLUo7aRkGrediwCSG1mfNGBoYF589Ujvjg6gw+hKz+1m9ebShiZD0nMle1bbLEtTnRQmlqkHJnEQ8FjRdHsx7SmFh8NmWSFq4Y0w38Uveo4Et55e2J4fuCyJGB/XHbZV3PgcwLI=,iv:oCN5Ymqh4+C4/0xXMNmdC+fTgZrIKvQ7uIfRjEP0tts=,tag:8qPFr5LShK0/wiy1+GU/mw==,type:str]
+    lastmodified: "2023-03-25T20:18:35Z"
+    mac: ENC[AES256_GCM,data:XiScUVSqRB97RhGcyAVACICttGG8zvNdtgJJMr0gFlXrcGm97WgsUc2IqLnGOpZvJ4r/5aLtMA/Hr4kfKgdOP9Wgz9yWWy7Doo9G74Oa+G5hwV/G/vpcUp9KIobb0we2lFZr5YAa/k5+thp0zKmOQmdefOwgquqExlprVoHIOew=,iv:M7vNAFeDmNATEM65a4le/MrtUjb1Q+z7lVbAPv37aRk=,tag:YK1Ye5+tNI3lJ0eAQLFOzA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
