--- a/cluster/apps/longhorn-system/longhorn/helm-release.yaml
+++ b/cluster/apps/longhorn-system/longhorn/helm-release.yaml
@@ -21,22 +21,25 @@ spec:
       longhorn:
         engine:
           repository: longhornio/longhorn-engine
-          tag: v1.3.0
+          tag: master-head
         manager:
           repository: longhornio/longhorn-manager
-          tag: v1.3.0
+          tag: master-head
         ui:
           repository: longhornio/longhorn-ui
-          tag: v1.3.0
+          tag: master-head
         instanceManager:
           repository: longhornio/longhorn-instance-manager
-          tag: v1_20220611
+          tag: master-head
         shareManager:
           repository: longhornio/longhorn-share-manager
-          tag: v1_20220531
+          tag: master-head
         backingImageManager:
           repository: longhornio/backing-image-manager
-          tag: v3_20220609
+          tag: master-head
+        supportBundleKit:
+          repository: longhornio/support-bundle-kit
+          tag: v0.0.22
       csi:
         attacher:
           repository: longhornio/csi-attacher
@@ -49,10 +52,14 @@ spec:
           tag: v2.5.0
         resizer:
           repository: longhornio/csi-resizer
-          tag: v1.2.0
+          tag: v1.3.0
         snapshotter:
           repository: longhornio/csi-snapshotter
-          tag: v3.0.3
+          tag: v5.0.1
+        livenessProbe:
+          repository: longhornio/livenessprobe
+          tag: v2.8.0
+        
       pullPolicy: IfNotPresent
 
     persistence:
