--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -1,37 +1,36 @@
----
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: &app plex
+  name: plex
   namespace: media
 spec:
-  interval: 15m
+  interval: 5m
   chart:
     spec:
-      chart: app-template
-      version: 1.1.3
+      # renovate: registryUrl=https://k8s-at-home.com/charts/
+      chart: plex
+      version: 6.4.3
       sourceRef:
         kind: HelmRepository
-        name: bjw-s-charts
+        name: k8s-at-home-charts
         namespace: flux-system
-  install:
-    createNamespace: true
-    remediation:
-      retries: 5
-  upgrade:
-    remediation:
-      retries: 5
-  dependsOn:
-    - name: longhorn
-      namespace: longhorn-system
+      interval: 5m
   values:
-    controller:
-      type: deployment
     image:
       repository: plexinc/pms-docker
       tag: 1.32.0.6918-6f393eda1
+      pullPolicy: IfNotPresent
+
     env:
       TZ: "America/Denver"
+      ALLOWED_NETWORKS: 192.168.1.0/255.255.255.0
+      PLEX_CLAIM: ${SECRET_PLEX_CLAIM}
+      PLEX_PREFERENCE_1: "FriendlyName=HancockPlex"
+
+    hostNetwork: true
+
+    dnsPolicy: ClusterFirstWithHostNet
+
     ingress:
       main:
         enabled: true
@@ -45,36 +44,25 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/icon: "plex"
         hosts:
-          - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
+          - host: plex.${SECRET_DOMAIN}
             paths:
               - path: /
                 pathType: Prefix
         tls:
           - hosts:
-              - *host
+              - "plex.${SECRET_DOMAIN}"
             secretName: plex-tls
-    volumeClaimTemplates:
-      - name: config
-        mountPath: /config
-        accessMode: ReadWriteOnce
-        size: 20Gi
-        storageClass: longhorn
+
     persistence:
-      # config:
-      #   enabled: true
-      #   type: nfs
-      #   server: "${NAS_ADDRESS}"
-      #   path: /volume2/plex_config
-      #   mountPath: /media
-      media:
+      data:
         enabled: true
-        type: nfs
-        server: "${NAS_ADDRESS}"
-        path: /volume1/Media/plex
-        mountPath: /media
-      transcode:
+        existingClaim: "plex-data-pvc"
+      config:
         enabled: true
-        type: emptyDir
+        type: pvc
+        storageClass: longhorn
+        size: 20Gi
+
     affinity:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
