--- a/cluster/apps/media/plex/storage.yaml
+++ b/cluster/apps/media/plex/storage.yaml
@@ -27,36 +27,36 @@ spec:
   resources:
     requests:
       storage: 4Ti
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: plex-config-pv
-  namespace: media
-spec:
-  capacity:
-    storage: 50Gi
-  volumeMode: Filesystem
-  accessModes:
-    - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: nfs
-  nfs:
-    path: /volume2/plex_config
-    server: ${NAS_ADDRESS}
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: plex-config-pvc
-  namespace: media
-spec:
-  storageClassName: nfs
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 50Gi
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: plex-config-pv
+#   namespace: media
+# spec:
+#   capacity:
+#     storage: 50Gi
+#   volumeMode: Filesystem
+#   accessModes:
+#     - ReadWriteMany
+#   persistentVolumeReclaimPolicy: Retain
+#   storageClassName: nfs
+#   nfs:
+#     path: /volume2/plex_config
+#     server: ${NAS_ADDRESS}
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: plex-config-pvc
+#   namespace: media
+# spec:
+#   storageClassName: nfs
+#   accessModes:
+#     - ReadWriteMany
+#   resources:
+#     requests:
+#       storage: 50Gi
 # ---
 # apiVersion: v1
 # kind: PersistentVolumeClaim
