--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -23,8 +23,8 @@ spec:
 
     env:
       TZ: "America/Denver"
-      ALLOWED_NETWORKS: 192.168.1.0/255.255.255.0
-      PLEX_CLAIM: ${SECRET_PLEX_CLAIM}
+      # ALLOWED_NETWORKS: 192.168.1.0/255.255.255.0
+      # PLEX_CLAIM: ${SECRET_PLEX_CLAIM}
       PLEX_PREFERENCE_1: "FriendlyName=HancockPlex"
 
     hostNetwork: true
