--- a/cluster/apps/home/ema-reader/cronjob.yaml
+++ b/cluster/apps/home/ema-reader/cronjob.yaml
@@ -9,7 +9,7 @@ spec:
   concurrencyPolicy: Forbid
   failedJobsHistoryLimit: 1
   successfulJobsHistoryLimit: 1
-  suspend: true
+  suspend: false
   jobTemplate:
     spec:
       template:
