--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -26,6 +26,7 @@ spec:
       # ALLOWED_NETWORKS: 192.168.1.0/255.255.255.0
       # PLEX_CLAIM: ${SECRET_PLEX_CLAIM}
       PLEX_PREFERENCE_1: "FriendlyName=HancockPlex"
+      PLEX_PREFERENCE_4: "DisableTLSv1_0=1"
 
     hostNetwork: true
 
