--- a/provision/ansible/inventory/hosts.yml
+++ b/provision/ansible/inventory/hosts.yml
@@ -15,3 +15,5 @@ kubernetes:
           ansible_host: 192.168.1.141
         k8s-3:
           ansible_host: 192.168.1.143
+        k8s-5:
+          ansible_host: 192.168.1.145
