--- a/cluster/apps/media/bookworm/helm-release.yaml
+++ b/cluster/apps/media/bookworm/helm-release.yaml
@@ -14,16 +14,16 @@ spec:
         kind: HelmRepository
         name: bjw-s-charts
         namespace: flux-system
-  install:
-    createNamespace: true
-    remediation:
-      retries: 5
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 5
-  uninstall:
-    keepHistory: false
+  # install:
+  #   createNamespace: true
+  #   remediation:
+  #     retries: 5
+  # upgrade:
+  #   cleanupOnFail: true
+  #   remediation:
+  #     retries: 5
+  # uninstall:
+  #   keepHistory: false
   values:
     replicas: 1
     strategy:
