edit nas ingress

--- a/cluster/apps/networking/traefik/external-services/nas.yaml
+++ b/cluster/apps/networking/traefik/external-services/nas.yaml
@@ -37,5 +37,6 @@ spec:
         paths:
         - path: /
           backend:
-            serviceName: nas
-            servicePort: https
+            service:
+              name: nas
+              port: https
