--- a/cluster/apps/networking/traefik/external-services/nas.yaml
+++ b/cluster/apps/networking/traefik/external-services/nas.yaml
@@ -39,4 +39,5 @@ spec:
           backend:
             service:
               name: nas
-              port: https
+              port:
+                number: 443
