change activation bytes to string

--- a/cluster/apps/media/bookworm/secrets.yaml
+++ b/cluster/apps/media/bookworm/secrets.yaml
@@ -4,8 +4,8 @@ type: Opaque
 metadata:
     name: bookworm-secrets
     namespace: media
-data:
-    activation-bytes: ENC[AES256_GCM,data:OmZUbyY9x/c=,iv:mt55MOL/vbw6aIFTEuqsgzv9WFQfF23i5PVeRUFaFAY=,tag:tHT/LEsRCFEjD89aEQKpOA==,type:str]
+stringData:
+    activation-bytes: ENC[AES256_GCM,data:kwCtaAw4ZQw=,iv:cEkodmoufXHMVfa3NTDedYUMK5zvW6fKBZK++4PmQYM=,tag:teVwyaz3Lg5VcUSZL0HJog==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             T2xDcG96dndhbExpbXRHUWZuZmtUZm8KW1WlDXF7ZUwoaKU5QqBrJZEhIThp6AOZ
             BQOn85/m5R5jc8dp6HCYNSeFCyuJ0WMWcDvIJJueY8S1tyo8Vezc1Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-04-23T04:06:45Z"
-    mac: ENC[AES256_GCM,data:kP+XNNUi27Swh2ROKCPggw+zhHAgaFH0jwi7PGaMtFgMEJ9LkHfTb8WRh1W1NgyhqPqM8lSIESpbu77XhzjrfJfNo/tFXJZNrtbN/MzK35TBbHVWmFk0XlDhWGaXG7pvt/7L4sbKSDUFX8MB4PDyIycLUNsNmgeyLsXBapIXDdc=,iv:nq4q45dr2/u9bjEHv25AdHeaHBmtqwgncSApntQDwzc=,tag:UR99MAtOyhJKX1+BbCUdhA==,type:str]
+    lastmodified: "2023-04-23T04:07:37Z"
+    mac: ENC[AES256_GCM,data:RiD4kbbTZ7XAsQ50NLUmB91GU9PsHGDQBiBYqA4VGXd0h0gzJMwwnaT3/jzSJNaVxnrNks8dB4ni+sASipTu7DQD5YTsKZKZBhS0rAeL/wL6LJko3KTitWE0yC2Fh2hmaz8ffuXEa9NRVmI0nBDPj94x+JcCy9fiGf6UIxRDFh4=,iv:nveUAnkXID11OyDFEPdSjOnNH2gLBuEEouVgejO9Jws=,tag:qvaVPFPX0XJbOzZf9i43aQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
