--- a/cluster/apps/media/bookworm/helm-release.yaml
+++ b/cluster/apps/media/bookworm/helm-release.yaml
@@ -14,16 +14,16 @@ spec:
         kind: HelmRepository
         name: bjw-s-charts
         namespace: flux-system
-  # install:
-  #   createNamespace: true
-  #   remediation:
-  #     retries: 5
-  # upgrade:
-  #   cleanupOnFail: true
-  #   remediation:
-  #     retries: 5
-  # uninstall:
-  #   keepHistory: false
+  install:
+    createNamespace: true
+    remediation:
+      retries: 5
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      retries: 5
+  uninstall:
+    keepHistory: false
   values:
     replicas: 1
     strategy:
@@ -35,6 +35,8 @@ spec:
     service:
       main:
         enabled: false
+    podAnnotations:
+      secret.reloader.stakater.com/reload: bookworm-secrets
     env:
       WATCH_DIR: &watch_dir /app/watch
       OUTPUT_DIR: &output_dir /app/output
