--- a/cluster/apps/media/bookworm/kustomization.yaml
+++ b/cluster/apps/media/bookworm/kustomization.yaml
@@ -2,4 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - secrets.yaml
+  - configmap.yaml
+  - storage.yaml
+  - cronjob.yaml
   # - helm-release.yaml
