--- a/cluster/apps/media/bookworm/secrets.yaml
+++ b/cluster/apps/media/bookworm/secrets.yaml
@@ -5,7 +5,7 @@ metadata:
     name: bookworm-secrets
     namespace: media
 stringData:
-    activation-bytes: ENC[AES256_GCM,data:kwCtaAw4ZQw=,iv:cEkodmoufXHMVfa3NTDedYUMK5zvW6fKBZK++4PmQYM=,tag:teVwyaz3Lg5VcUSZL0HJog==,type:str]
+    secret.yml: ENC[AES256_GCM,data:JltUGCPd/l2on8DLT1V1ks0FDWcHO9adz/ag8SiY,iv:rknKKDYhulWZBRC61yCEzBsFoEH8couALuNiXsR/gxs=,tag:TNupSSEYJ4D5bQ7OgtUh3w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             T2xDcG96dndhbExpbXRHUWZuZmtUZm8KW1WlDXF7ZUwoaKU5QqBrJZEhIThp6AOZ
             BQOn85/m5R5jc8dp6HCYNSeFCyuJ0WMWcDvIJJueY8S1tyo8Vezc1Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-04-23T04:07:37Z"
-    mac: ENC[AES256_GCM,data:RiD4kbbTZ7XAsQ50NLUmB91GU9PsHGDQBiBYqA4VGXd0h0gzJMwwnaT3/jzSJNaVxnrNks8dB4ni+sASipTu7DQD5YTsKZKZBhS0rAeL/wL6LJko3KTitWE0yC2Fh2hmaz8ffuXEa9NRVmI0nBDPj94x+JcCy9fiGf6UIxRDFh4=,iv:nveUAnkXID11OyDFEPdSjOnNH2gLBuEEouVgejO9Jws=,tag:qvaVPFPX0XJbOzZf9i43aQ==,type:str]
+    lastmodified: "2023-04-23T19:38:04Z"
+    mac: ENC[AES256_GCM,data:Yl7T8uk84n4W14uVFNJvutVNnIQtvsP7Aw1IRyFKIM2aF4fagw2+TnN651pvQV0E4L9bxQor29fpshBKXSmVeNwh1fKVBsOmFus17rfk6gaBkNLnRw+UlajLFSdiMp2BfsGynU4s71S+bjmw7xAwkFcZ/z4lRp7aS62W+RnCCBY=,iv:jXtkqvnpPvpva9YXbJ4MNJXRLGBdrd2EOl8vA2g65xE=,tag:0K6xEH/3fr7OGYNS42YfCg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
