change persistentvolume reclaim policy

--- a/cluster/apps/media/bookworm/storage.yaml
+++ b/cluster/apps/media/bookworm/storage.yaml
@@ -10,7 +10,7 @@ spec:
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Delete
+  persistentVolumeReclaimPolicy: Retain
   storageClassName: nfs
   nfs:
     path: /volume12/bookworm-watch
