--- a/cluster/apps/media/bookworm/storage.yaml
+++ b/cluster/apps/media/bookworm/storage.yaml
@@ -24,7 +24,7 @@ metadata:
 spec:
   storageClassName: nfs
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 2Gi
