--- a/cluster/core/metallb-system/helm-release.yaml
+++ b/cluster/core/metallb-system/helm-release.yaml
@@ -36,5 +36,4 @@ spec:
         tag: v0.13.10
       frr:
         image:
-          repository: frrouting/frr
-
+          repository: quay.io/frrouting/frr
