--- a/cluster/apps/home/ema-reader/cronjob.yaml
+++ b/cluster/apps/home/ema-reader/cronjob.yaml
@@ -5,7 +5,7 @@ metadata:
   name: ema-reader
   namespace: home
 spec:
-  schedule: "*/5 * * * *"
+  schedule: "*/5 6-21 * * *"
   concurrencyPolicy: Forbid
   failedJobsHistoryLimit: 1
   successfulJobsHistoryLimit: 1
