redact dns logs

--- a/cluster/apps/networking/blocky/helm-release.yaml
+++ b/cluster/apps/networking/blocky/helm-release.yaml
@@ -103,6 +103,7 @@ spec:
       log:
         format: json
         level: info
+        privacy: true
     podAnnotations:
       configmap.reloader.stakater.com/reload: "blocky-config"
     affinity:
