add back longhorn and ha

--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -6,8 +6,8 @@ resources:
   - networking
   # - system-upgrade
   - cattle-system
-  # - longhorn-system
-  # - home
+  - longhorn-system
+  - home
   # - media
   # - games
   # - monitoring
