--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -1,13 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - default
+  # - default
   - kube-system
   - networking
   # - system-upgrade
-  - cattle-system
-  - longhorn-system
-  - home
+  # - cattle-system
+  # - longhorn-system
+  # - home
   # - media
   # - games
   # - monitoring
