--- a/provision/ansible/inventory/hosts.yml
+++ b/provision/ansible/inventory/hosts.yml
@@ -11,8 +11,8 @@ kubernetes:
           ansible_host: 192.168.1.143
     worker:
       hosts:
-        k8s-0:
-          ansible_host: 192.168.1.140
+        # k8s-0:
+        #   ansible_host: 192.168.1.140
         k8s-2:
           ansible_host: 192.168.1.142
         k8s-4:
