--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - default
-  - kube-system
   - networking
+  # - kube-system
+  # - default
   # - system-upgrade
   # - cattle-system
   # - longhorn-system
