--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespaces
-  - cert-manager
-  - kube-system
+  # - cert-manager
+  # - kube-system
   - metallb-system
-  - system-upgrade
+  # - system-upgrade
