--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 resources:
   - namespaces
   - cert-manager
-  # - kube-system
+  - kube-system
   - metallb-system
-  # - system-upgrade
+  - system-upgrade
