--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -2,10 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - networking
-  # - kube-system
+  - kube-system
   # - default
   # - system-upgrade
-  # - cattle-system
+  - cattle-system
   # - longhorn-system
   # - home
   # - media
