--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   # - system-upgrade
   - cattle-system
   # - longhorn-system
-  # - home
+  - home
   # - media
   # - games
   # - monitoring
