--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - default
   - system-upgrade
   - cattle-system
-  # - longhorn-system
+  - longhorn-system
   - home
   # - media
   # - games
