add traefik, cert-manager dependencies to external facing services

--- a/cluster/apps/cattle-system/rancher/helm-release.yaml
+++ b/cluster/apps/cattle-system/rancher/helm-release.yaml
@@ -14,6 +14,11 @@ spec:
         kind: HelmRepository
         name: rancher-charts
         namespace: flux-system
+  dependsOn:
+    - name: traefik
+      namespace: networking
+    - name: cert-manager
+      namespace: cert-manager
   interval: 15m0s
   values:
     replicas: 1
