--- a/cluster/apps/longhorn-system/longhorn/helm-release.yaml
+++ b/cluster/apps/longhorn-system/longhorn/helm-release.yaml
@@ -16,6 +16,11 @@ spec:
         name: longhorn-charts
         namespace: flux-system
       interval: 5m
+  dependsOn:
+    - name: traefik
+      namespace: networking
+    - name: cert-manager
+      namespace: cert-manager      
   values:
     image:
       longhorn:
