--- a/cluster/apps/home/teslamate/helm-release.yaml
+++ b/cluster/apps/home/teslamate/helm-release.yaml
@@ -18,7 +18,7 @@ spec:
       namespace: networking
     - name: cert-manager
       namespace: cert-manager
-    - name: mqtt
+    - name: mosquitto
       namespace: home
   interval: 5m
   install:
