--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -1,13 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - networking
-  - kube-system
-  - default
-  - system-upgrade
-  - cattle-system
-  - home
-  - longhorn-system
-  - media
+  # - networking
+  # - kube-system
+  # - default
+  # - system-upgrade
+  # - cattle-system
+  # - home
+  # - longhorn-system
+  # - media
   # - games
   # - monitoring
