--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -1,12 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - networking
-  # - kube-system
-  # - default
-  # - system-upgrade
+  - networking
+  - kube-system
+  - default
+  - system-upgrade
+  - home
   # - cattle-system
-  # - home
   # - longhorn-system
   # - media
   # - games
