--- a/cluster/apps/media/plex/storage.yaml
+++ b/cluster/apps/media/plex/storage.yaml
@@ -1,32 +1,33 @@
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: plex-data-pv
-  namespace: media
-spec:
-  capacity:
-    storage: 4Ti
-  volumeMode: Filesystem
-  accessModes:
-    - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: nfs
-  nfs:
-    path: /volume1/Media/plex
-    server: ${NAS_ADDRESS}
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: plex-data-pvc
-  namespace: media
-spec:
-  storageClassName: nfs
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 4Ti
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: plex-data-pv
+#   namespace: media
+# spec:
+#   capacity:
+#     storage: 4Ti
+#   volumeMode: Filesystem
+#   accessModes:
+#     - ReadWriteMany
+#   persistentVolumeReclaimPolicy: Retain
+#   storageClassName: nfs
+#   nfs:
+#     path: /volume1/Media/plex
+#     server: ${NAS_ADDRESS}
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: plex-data-pvc
+#   namespace: media
+# spec:
+#   storageClassName: nfs
+#   accessModes:
+#     - ReadWriteMany
+#   resources:
+#     requests:
+#       storage: 4Ti
 # ---
 # apiVersion: v1
 # kind: PersistentVolume
