--- a/cluster/apps/media/plex/bjw-s-helm-release.yaml
+++ b/cluster/apps/media/plex/bjw-s-helm-release.yaml
@@ -38,27 +38,76 @@ spec:
 
     controllers:
       main:
+        initContainers:
+          loader:
+            enabled: true
+            image:
+              repository: eeacms/rsync
+              tag: latest
+            command:
+              - /bin/sh
+            args: # copy from nas to container
+              - -c
+              # - "cp -r -a /nas/. /copy/"
+              - "rsync -a /nas/. /copy/"
+              # - -r
+              # - -a
+              # - /nas/.
+              # - /copy/
         containers:
           main:
             image:
               repository: plexinc/pms-docker
-              tag: 1.32.5.7516-8f4248874
+              tag: 1.32.6.7557-1cf77d501
             env:
               TZ: America/Denver
               ALLOWED_NETWORKS: 192.168.1.0/255.255.255.0
               HOSTNAME: HancockPlex
-          rclone:
+            probes:
+              liveness:
+                type: HTTP
+                path: /web/index.html
+              readiness:
+                type: HTTP
+                path: /web/index.html
+              startup:
+                type: HTTP
+                path: /web/index.html
+          unloader:
             enabled: true
             image:
-              repository: rclone/rclone
+              repository: eeacms/rsync
               tag: latest
+            command:
+              - /bin/sh
+            args:
+              - -c
+              # - "while true; do sleep 60 && cp -r -a /copy/. /nas/ ; done;"
+              # - "trap : TERM INT; while true; do sleep 30 && cp -r -a /copy/. /nas/ ; done;"
+              - "trap : TERM INT; while true; do sleep 30 && rsync -a /copy/. /nas/ ; done;"
+            # lifecycle:
+            #   preStop:  # when pod is stopping
+            #     exec:
+            #       command: # copy from container back to nas 
+            #         - /bin/sh
+            #         - -c
+            #         - "cp -r -a /copy/. /nas/"
+
+    service:
+      main:
+        type: NodePort
+        ports:
+          http:
+            port: 32400
+            # nodePort: 32400
 
     ingress:
       main:
         enabled: true
         annotations: 
           kubernetes.io/ingress.class: traefik 
-          external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
+          # external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
+          external-dns.alpha.kubernetes.io/target: ipv4.hancockfam.net
           external-dns/is-public: "true"
           cert-manager.io/cluster-issuer: letsencrypt-production
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
@@ -66,35 +115,44 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/icon: plex
         hosts:
-          - host: plex.${SECRET_DOMAIN}
+          # - host: plex.${SECRET_DOMAIN}
+          - host: plex.hancockfam.net
             paths:
               - path: /
                 pathType: Prefix
+                service:
+                  name: main
         tls:
           - hosts:
-              - plex.${SECRET_DOMAIN}
+              # - plex.${SECRET_DOMAIN}
+              - plex.hancockfam.net
             secretName: plex-tls
 
     persistence:
       media:
         enabled: true
         type: nfs
-        server: ${NAS_ADDRESS}
+        # server: ${NAS_ADDRESS}
+        server: 192.168.1.20
         path: /volume1/Media/plex
         advancedMounts:
           main:
             main:
               - path: /data
                 readOnly: false
-      source:
+      nas:
         enabled: true
         type: nfs
-        server: ${NAS_ADDRESS}
+        # server: ${NAS_ADDRESS}
+        server: 192.168.1.20
         path: /volume2/plex_config
         advancedMounts:
           main:
-            rclone:
-              - path: /source
+            unloader:
+              - path: /nas
+                readOnly: false
+            loader:
+              - path: /nas
                 readOnly: false
       copy:
         enabled: true
@@ -105,6 +163,9 @@ spec:
             main:
               - path: /config
                 readOnly: false
-            rclone:
+            unloader:
+              - path: /copy
+                readOnly: false
+            loader:
               - path: /copy
                 readOnly: false
