--- a/cluster/apps/media/plex/bjw-s-helm-release.yaml
+++ b/cluster/apps/media/plex/bjw-s-helm-release.yaml
@@ -9,7 +9,7 @@ spec:
     spec:
       # renovate: registryUrl=https://bjw-s.github.io/helm-charts
       chart: app-template
-      version: 2.0.2
+      version: 2.0.3
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -37,21 +37,87 @@ spec:
                 - amd64
 
     controllers:
+      # backup:
+      #   enabled: false
+      #   nameOverride: backup
+      #   type: cronjob
+      #   cronjob:
+      #     schedule: 0 */6 * * *
+      #     backoffLimit: 3
+      #   containers:
+      #     main:
+      #       enabled: true
+      #       image:
+      #         repository: eeacms/rsync
+      #         tag: latest
+      #       command:
+      #         - /bin/sh
+      #       args: # copy from container to nas
+      #         - -c
+      #         - "rsync -a /copy/. /nas/"
       main:
+        # initContainers:
+        #   loader:
+        #     enabled: false
+        #     image:
+        #       repository: eeacms/rsync
+        #       tag: latest
+        #     command:
+        #       - /bin/sh
+        #     args: # copy from nas to container
+        #       - -c
+        #       # - "cp -r -a /nas/. /copy/"
+        #       - "rsync -a /nas/. /copy/"
+        #       # - -r
+        #       # - -a
+        #       # - /nas/.
+        #       # - /copy/
         containers:
           main:
             image:
               repository: plexinc/pms-docker
-              tag: 1.32.5.7516-8f4248874
+              tag: 1.32.6.7557-1cf77d501
             env:
               TZ: America/Denver
               ALLOWED_NETWORKS: 192.168.1.0/255.255.255.0
               HOSTNAME: HancockPlex
-          rclone:
-            enabled: true
-            image:
-              repository: rclone/rclone
-              tag: latest
+            probes:
+              liveness:
+                type: HTTP
+                path: /web/index.html
+              readiness:
+                type: HTTP
+                path: /web/index.html
+              startup:
+                type: HTTP
+                path: /web/index.html
+          # unloader:
+          #   enabled: false
+          #   image:
+          #     repository: eeacms/rsync
+          #     tag: latest
+          #   command:
+          #     - /bin/sh
+          #   args:
+          #     - -c
+          #     # - "while true; do sleep 60 && cp -r -a /copy/. /nas/ ; done;"
+          #     # - "trap : TERM INT; while true; do sleep 30 && cp -r -a /copy/. /nas/ ; done;"
+          #     - "trap : TERM INT; while true; do sleep 30 && rsync -a /copy/. /nas/ ; done;"
+          #   # lifecycle:
+          #   #   preStop:  # when pod is stopping
+          #   #     exec:
+          #   #       command: # copy from container back to nas 
+          #   #         - /bin/sh
+          #   #         - -c
+          #   #         - "cp -r -a /copy/. /nas/"
+
+    service:
+      main:
+        type: NodePort
+        ports:
+          http:
+            port: 32400
+            # nodePort: 32400
 
     ingress:
       main:
@@ -70,6 +136,8 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+                service:
+                  name: main
         tls:
           - hosts:
               - plex.${SECRET_DOMAIN}
@@ -86,25 +154,37 @@ spec:
             main:
               - path: /data
                 readOnly: false
-      source:
+      nas:
         enabled: true
         type: nfs
         server: ${NAS_ADDRESS}
         path: /volume2/plex_config
         advancedMounts:
-          main:
-            rclone:
-              - path: /source
-                readOnly: false
-      copy:
-        enabled: true
-        type: emptyDir
-        size: 50Gi
-        advancedMounts:
+          # backup:
+          #   main:
+          #     - path: /nas
+          #       readOnly: false
+          # main:
+          #   loader:
+          #     - path: /nas
+          #       readOnly: false
           main:
             main:
               - path: /config
-                readOnly: false
-            rclone:
-              - path: /copy
-                readOnly: false
+                readOnly: false          
+      # copy:
+      #   enabled: false
+      #   type: emptyDir
+      #   size: 50Gi
+      #   advancedMounts:
+      #     backup:
+      #       main:
+      #         - path: /copy
+      #           readOnly: false
+      #     main:
+      #       main:
+      #         - path: /config
+      #           readOnly: false
+      #       loader:
+      #         - path: /copy
+      #           readOnly: false
