--- a/cluster/apps/media/plex/kustomization.yaml
+++ b/cluster/apps/media/plex/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - storage.yaml
-  - helm-release.yaml
+  # - storage.yaml
+  - bjw-s-helm-release.yaml
