--- a/cluster/apps/media/bookworm/bjw-s-helm-release.yaml
+++ b/cluster/apps/media/bookworm/bjw-s-helm-release.yaml
@@ -31,6 +31,10 @@ spec:
               repository: craighton/bookworm
               tag: 2023.4.2-python
 
+    service:
+      main:
+        enabled: false
+
     configMaps:
       config:
         data:
